--- a/covid-frontend/src/components/Home.css
+++ b/covid-frontend/src/components/Home.css
@@ -1,7 +1,21 @@
-.Home{
+.home{
     text-align: left;
+    margin: 0px 100px 0px 100px;
 }
 
-p{
-    color: black;
+.title{
+    font-size: 60px;
+}
+
+.desc{
+    font-size: 20px;
+}
+
+.calculate_button{
+    font-size: 30px;
+}
+
+.works_button{
+    font-size: 15px;
+    margin-top: 10px;
 }
