--- a/covid-frontend/src/components/Home.css
+++ b/covid-frontend/src/components/Home.css
@@ -11,11 +11,11 @@
     font-size: 20px;
 }
 
-.calculate_button{
+.calculate-button{
     font-size: 30px;
 }
 
-.works_button{
+.works-button{
     font-size: 15px;
     margin-top: 10px;
 }
