--- a/covid-frontend/src/components/Home.css
+++ b/covid-frontend/src/components/Home.css
@@ -1,6 +1,6 @@
 .home{
     text-align: left;
-    margin: 0px 100px 0px 100px;
+    margin: 100px 100px 0px 100px;
 }
 
 .title{
@@ -9,10 +9,12 @@
 
 .desc{
     font-size: 20px;
+    margin: 30px 0px;
 }
 
 .calculate-button{
     font-size: 30px;
+    margin-top: 50px;
 }
 
 .works-button{
