--- a/covid-frontend/src/components/Home.css
+++ b/covid-frontend/src/components/Home.css
@@ -12,19 +12,6 @@
     margin: 30px 0px;
 }
 
-.btn.btn-primary{
-    width: 200px;
-    font-size: 30px;
-    margin-top: 50px;
-    border-radius: 0px;
-    background-color: #65B7FF;
-}
-
-.btn.btn-basic{
-    width: 150px;
-    font-size: 15px;
-    margin-top: 10px;
-    border-radius: 10px;
-    color: black;
-    background-color: silver;
-}
+body {
+    background-color: #fff;
+  }
