--- a/covid-frontend/src/App.css
+++ b/covid-frontend/src/App.css
@@ -56,3 +56,15 @@
   color: black;
   background-color: silver;
 }
+
+.left-layout{
+  text-align: left;
+  margin: 100px 100px 0px 100px;
+  font-family: 'Cormorant Garamond', Garamond, Georgia, 'Times New Roman', Times, serif;
+}
+
+.centered-layout{
+  text-align: center;
+  margin: 100px 100px 0px 100px;
+  font-family: 'Cormorant Garamond', Garamond, Georgia, 'Times New Roman', Times, serif;
+}
