--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,19 @@
   background-color: silver;
 }
 
+.btn.btn-secondary {
+  /* margin-top: 50px; */
+  margin: 10px;
+  width: 250px;
+  height: 250px;
+  border-radius: 15px;
+  font-size: 20px;
+  text-align: center;
+  line-height: 0px;
+  background-color: gray;
+  background-size: 100% 100%;
+}
+
 .left-layout{
   text-align: left;
   margin: 100px 100px 0px 100px;
@@ -66,5 +79,9 @@
 .centered-layout{
   text-align: center;
   margin: 100px 100px 0px 100px;
+  font-family: 'Cormorant Garamond', Garamond, Georgia, 'Times New Roman', Times, serif;
+}
+
+.results{
   font-family: 'Cormorant Garamond', Garamond, Georgia, 'Times New Roman', Times, serif;
 }
