--- a/src/components/BasicClassroom.css
+++ b/src/components/BasicClassroom.css
@@ -57,13 +57,24 @@ input {
 .slider {
   -webkit-appearance: none;  /* Override default CSS styles */
   appearance: none;
-  width: 350%; /* Full-width */
-  height: 25px; /* Specified height */
+  width: 300%; /* Full-width */
+  height: 13px; /* Specified height */
+  border-radius: 5px;
   background: #d3d3d3; /* Grey background */
   outline: none; /* Remove outline */
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
   -webkit-transition: .2s; /* 0.2 seconds transition on hover */
   transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #00009C;
+  cursor: pointer;
 }
 
 .slider:hover {
