--- a/src/components/CalculateHome.css
+++ b/src/components/CalculateHome.css
@@ -1,11 +1,23 @@
-#classroom-button{
-    background-image: url(/classroom.png);
-} 
+.title{
+    font-size: 60px;
+}
 
-#dining-button{
-    background-image: url(/dining.png);
-} 
+.desc{
+    font-size: 20px;
+    margin: 30px 0px;
+}
 
-#commonroom-button{
-    background-image: url(/commonroom.png);
-} 
+.calculate-basic-button{
+    font-size: 20px;
+    margin-top: 50px;
+}
+
+.calculate-advanced-button{
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+.button-desc{
+    font-size: 20px;
+    margin-top: 20px;
+}
