--- a/src/components/CustomSlider.css
+++ b/src/components/CustomSlider.css
@@ -21,7 +21,7 @@
     top: 0;
     bottom: 0;
     border-radius: 5px;
-    background-color: black;
+    background-color: #E1EAFF;
 }
 .bar > .range{
     position: absolute;
@@ -31,19 +31,16 @@
     top: 0;
     bottom: 0;
     border-radius: 5px;
-    background-color: purple;
+    background-color: #012169;
 }
 .bar > .thumb{
     position: absolute;
     z-index: 3;
     width: 30px;
     height: 30px;
-    background-color: purple;
+    background-color: #012169;
     border-radius: 50%;
     opacity: 1;
-
-    box-shadow: 0 0 0 0 purple;
-    transition: box-shadow 0.2s ease-in-out;
 }
 .bar > .thumb.left{
     transform: translate(-15px, -10px);
