--- a/src/App.css
+++ b/src/App.css
@@ -73,15 +73,15 @@
 .left-layout{
   text-align: left;
   margin: 100px 100px 0px 100px;
-  font-family: 'Cormorant Garamond', Garamond, Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Roboto';
 }
 
 .centered-layout{
   text-align: center;
   margin: 100px 100px 0px 100px;
-  font-family: 'Cormorant Garamond', Garamond, Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Roboto';
 }
 
 .results{
-  font-family: 'Cormorant Garamond', Garamond, Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Roboto';
 }
