--- a/src/components/CustomSlider.css
+++ b/src/components/CustomSlider.css
@@ -1,7 +1,6 @@
-.frame{
+#frame{
     position: relative;
-    width: 50%;
-    max-width: 500px;
+    width: 100%;
     height: 90px;
     padding: 40px 0px;
     background-color: transparent;
