--- a/src/components/CalculateClassroom.css
+++ b/src/components/CalculateClassroom.css
@@ -5,7 +5,7 @@
     height: auto;
     background-color: transparent;
     left: 30%;
-    margin: 100px 0px;
+    margin: 100px 0px 0px 0px;
 }
 
 .advanced-frame{
@@ -14,7 +14,7 @@
     height: auto;
     background-color: transparent;
     left: 20%;
-    margin: 100px 0px;
+    margin: 50px 0px 0px 0px;
 }
 
 .title-bar{
@@ -93,21 +93,16 @@ input[type=text]{
     width: 60%;
 }
 
-.button-holder{
-    background-color: transparent;
-    position: relative;
-    top: -100px;
-    margin: 0px 0px 0px 0px;
-}
-
 .calc-button{
     position: relative;
     width: 15%;
     left: 42.5%;
     height: 70px;
+    top: -20px;
     font-size: 150%;
     background-color: #FAA251;
     color: black;
+    font-size: 150%;
     border-radius: 20px;
     border: none;
     box-shadow: 0px 2px 4px rgb(200, 200, 200);
