--- a/src/components/CalculateClassroom.css
+++ b/src/components/CalculateClassroom.css
@@ -1,7 +1,7 @@
 .basic-frame{
     position: relative;
     width: 40%;
-    max-width: 1000px;
+    min-width: 500px;
     height: auto;
     background-color: transparent;
     left: 30%;
@@ -11,10 +11,11 @@
 .advanced-frame{
     position: relative;
     width: 60%;
+    min-width: 700px;
     height: auto;
     background-color: transparent;
     left: 20%;
-    margin: 50px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
 }
 
 .title-bar{
@@ -95,10 +96,10 @@ input[type=text]{
 
 .calc-button{
     position: relative;
-    width: 15%;
-    left: 42.5%;
+    width: 200px;
     height: 70px;
-    top: -20px;
+    top: -80px;
+    left: calc(100% - 220px);
     font-size: 150%;
     background-color: #FAA251;
     color: black;
@@ -106,8 +107,8 @@ input[type=text]{
     border-radius: 20px;
     border: none;
     box-shadow: 0px 2px 4px rgb(200, 200, 200);
-    transition: opacity 0.15s ease-in-out;
+    transition: background-color 0.15s ease-in-out;
 }
 .calc-button:hover{
-    opacity: 0.5;
+    background-color: #FBBC83;
 }
