--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@
   font-size: 20px;
   text-align: center;
   line-height: 0px;
-  background-color: gray;
+  background-color: grey;
   background-size: 100% 100%;
 }
 
