--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -9,4 +9,8 @@
 
 body {
     background-color: #fff;
+    background-image: url(/backgroundduke.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
   }
