--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -1,8 +1,13 @@
+.results{
+    display: flex;
+    padding: 2%;
+}
+
 .info-container{
     justify-content: center;
     align-items: center;
     background: transparent;
-    margin: 50px 100px;
+    padding: 50px;
 }
 
 .infobar{
@@ -10,14 +15,18 @@
     align-items: center;
     display: flex;
     background: transparent;
+    margin: 0px 0px 50px 0px;
+    /* width: 80%; */
+    /* left: 10%; */
 }
 
 .infobox{
     background: #F0F0F0;
     position: relative;
-    height: 170px;
+    /* height: 170px; */
     width: 80%;
     margin: 0px 0px 0px -70px;
+    padding: 0px 0px 20px 0px;
     z-index: 1;
     border-radius: 15px;
     box-shadow: 0px 2px 4px rgb(200, 200, 200);
@@ -61,8 +70,9 @@
     background: white;
     border-radius: 15px;
     z-index: 0;
-    width: 50%;
-    margin: 0px 45%;
+    /* width: 80%; */
+    /* left: 20%; */
+    /* margin: 0px 60%; */
 }
 
 .breakdown-title{
